--- a/packages/components/operator/Cargo.toml
+++ b/packages/components/operator/Cargo.toml
@@ -10,6 +10,7 @@ repository.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
+tg-utils = { workspace = true, features = ["client"] }
 tg-contract-api = { workspace = true }
 layer-climb = { workspace = true }
 serde = { workspace = true }
