--- a/packages/server/Cargo.toml
+++ b/packages/server/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 
 [dependencies]
 tg-contract-api = { workspace = true }
-tg-utils = { workspace = true }
+tg-utils = { workspace = true, features = ["binary"] }
 axum = { workspace = true }
 anyhow = { workspace = true }
 serde_json = { workspace = true }
