--- a/packages/tests/off-chain/Cargo.toml
+++ b/packages/tests/off-chain/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 
 [dependencies]
 tg-test-common = { workspace = true }
-tg-utils = { workspace = true, features = ["multitest"] }
+tg-utils = { workspace = true, features = ["binary"] }
 tg-contract-payments = { workspace = true}
 tg-contract-api= { workspace = true}
 wavs-types = { workspace = true }
