--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,20 @@
 RUST_LOG="info"
+
 CLI_MNEMONIC=""
+
 WAVS_OPERATOR_MNEMONIC_1=""
 WAVS_OPERATOR_MNEMONIC_2=""
+
+# Only needed for the aggregator
 WAVS_AGGREGATOR_COSMOS_CREDENTIAL=""
+
+# Only needed for the server
+SERVER_TELEGRAM_BOT_TOKEN=""
+SERVER_TELEGRAM_WEBHOOK_SECRET=""
+SERVER_TELEGRAM_GROUP_ID=""
+
+# Per-operator
+WAVS_OPERATOR_TELEGRAM_BOT_TOKEN=""
+
+# Optional - only needed for local testing with ngrok via the `task backend:ngrok` command
+NGROK_URL=""
