--- a/taskfile/config.yml
+++ b/taskfile/config.yml
@@ -44,6 +44,7 @@ vars:
   WAVS_AGGREGATOR_PORT: 8200
   IPFS_API_PORT: 8300
   IPFS_GATEWAY_PORT: 8301
+  SERVER_PORT: 8443
 
   DOCKER_SUDO:
     sh: |
