--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace = true
 
 [dependencies]
 tg-contract-api = { workspace = true }
-tg-utils = { workspace = true, features = ["binary"] }
+tg-utils = { workspace = true, features = ["full"] }
 tokio = {workspace = true}
 clap = {workspace = true}
 dotenvy = {workspace = true}
