--- a/packages/server/Cargo.toml
+++ b/packages/server/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 
 [dependencies]
 tg-contract-api = { workspace = true }
-tg-utils = { workspace = true, features = ["binary"] }
+tg-utils = { workspace = true, features = ["full"] }
 axum = { workspace = true }
 anyhow = { workspace = true }
 serde_json = { workspace = true }
@@ -18,3 +18,7 @@ tokio = { workspace = true }
 tower-http = { workspace = true }
 rustls = { workspace = true }
 tracing = { workspace = true }
+clap = { workspace = true }
+dotenvy = {workspace = true}
+thiserror = {workspace = true}
+reqwest = {workspace = true}
