--- a/packages/components/operator/Cargo.toml
+++ b/packages/components/operator/Cargo.toml
@@ -10,7 +10,7 @@ repository.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-tg-utils = { workspace = true, features = ["client"] }
+tg-utils = { workspace = true, features = ["wasi"] }
 tg-contract-api = { workspace = true }
 layer-climb = { workspace = true }
 serde = { workspace = true }
@@ -23,3 +23,4 @@ thiserror = { workspace = true }
 cosmwasm-std = { workspace = true }
 wavs-types = {workspace = true}
 wit-bindgen = {workspace = true}
+cfg-if = {workspace = true}
