--- a/packages/components/operator/Cargo.toml
+++ b/packages/components/operator/Cargo.toml
@@ -14,6 +14,7 @@ tg-utils = { workspace = true, features = ["wasi"] }
 tg-contract-api = { workspace = true }
 layer-climb = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 bincode = { workspace = true }
 anyhow = { workspace = true }
 wstd = { workspace = true }
