bot knows services

--- a/.example.env
+++ b/.example.env
@@ -9,9 +9,10 @@ WAVS_OPERATOR_MNEMONIC_2=""
 WAVS_AGGREGATOR_COSMOS_CREDENTIAL=""
 
 # Only needed for the server
-SERVER_TELEGRAM_BOT_TOKEN=""
-SERVER_TELEGRAM_WEBHOOK_SECRET=""
-SERVER_TELEGRAM_GROUP_ID=""
+SERVER_TELEGRAM_BOT_TOKEN=""        # via BotFather
+SERVER_TELEGRAM_WEBHOOK_SECRET=""   # any random characters
+SERVER_TELEGRAM_GROUP_ID=""         # get it via messaging the bot `/groupId`
+SERVER_TELEGRAM_ADMIN_KEY=""        # any random characters
 
 # Per-operator
 WAVS_OPERATOR_TELEGRAM_BOT_TOKEN=""
