--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -21,3 +21,4 @@ rustls = {workspace = true}
 tracing = {workspace = true}
 layer-climb = {workspace = true}
 reqwest = {workspace = true}
+cosmwasm-std = {workspace = true}
