--- a/taskfile/backend.yml
+++ b/taskfile/backend.yml
@@ -187,6 +187,7 @@ tasks:
       COMPOSE_WAVS_AGGREGATOR_PORT: "{{.WAVS_AGGREGATOR_PORT}}"
       WAVS_AGGREGATOR_COSMOS_CREDENTIAL:
         sh: task backend:get-wavs-aggregator-cosmos-credential
+      WAVS_LOG_LEVEL: '{{.RUST_LOG | default "info"}}'
     cmds:
       - echo "Starting WAVS Aggregator on port {{.WAVS_AGGREGATOR_PORT}}"
       - |
