--- a/taskfile/config.yml
+++ b/taskfile/config.yml
@@ -37,6 +37,9 @@ vars:
   COMPONENT_PREFIX: "tg_component"
   CW_OPTIMIZER_CACHE: "wavs-telegram-payments"
   SERVICE_CRON_SCHEDULE: "*/10 * * * * * *" # Every 10 seconds
+  DEFAULT_MIDDLEWARE_THRESHOLD: 100
+  DEFAULT_MIDDLEWARE_SIGNER_WEIGHT: 100
+  DEFAULT_MIDDLEWARE_STRATEGIES: "test_strategy_1=100 test_strategy_2=200"
 
   # Changing this requires a change in `packages/tests/on-chain/src/client/config.rs`
   WAVS_BASE_PORT: 8123 # Base port for WAVS, subsequent ports will be incremented by 1 for each instance
@@ -56,7 +59,8 @@ vars:
   HEALTH_CHECK_TIMEOUT: 5 # seconds to wait for service health checks
   COSMWASM_OPTIMIZER_IMAGE: 'cosmwasm/optimizer{{if eq .ARCH "arm64"}}-arm64{{end}}:0.17.0'
   WAVS_DOCKER_IMAGE: 'ghcr.io/lay3rlabs/wavs:latest{{if eq .ARCH "arm64"}}-arm64{{end}}'
-  WAVS_CW_MIDDLEWARE_DOCKER_IMAGE: 'ghcr.io/lay3rlabs/cw-middleware:latest{{if eq .ARCH "arm64"}}-arm64{{end}}'
+  #WAVS_CW_MIDDLEWARE_DOCKER_IMAGE: 'ghcr.io/lay3rlabs/cw-middleware:0.2.0-alpha.9{{if eq .ARCH "arm64"}}-arm64{{end}}'
+  WAVS_CW_MIDDLEWARE_DOCKER_IMAGE: "cw-middleware:local"
   JAEGER_DOCKER_IMAGE: "jaegertracing/jaeger:2.5.0"
   PROMETHEUS_DOCKER_IMAGE: "prom/prometheus:v3.3.0"
   IPFS_DOCKER_IMAGE: "ipfs/kubo:v0.38.1"
